--- a/README
+++ b/README
@@ -2,12 +2,18 @@ Installation:
 
     git clone git://github.com/gavinmcgimpsey/.vim.git ~/.vim
 
-Create symlinks:
+  Create symlinks:
 
     ln -s ~/.vim/vimrc ~/.vimrc
     ln -s ~/.vim/gvimrc ~/.gvimrc
 
-Switch to the `~/.vim` directory, and fetch submodules:
+  Switch to the `~/.vim` directory, and fetch submodules:
 
     cd ~/.vim
     git submodule update --init
+
+
+Installing new plugins:
+
+  git submodule add <url> bundle/<plugin_name>
+
